fixed neon spacing

--- a/css/about.css
+++ b/css/about.css
@@ -1093,7 +1093,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 
 @media only screen and (min-width: 0em) {
 
-    .neon span:nth-child(1) {
+    #quality .neon span:nth-child(1) {
         margin-right: 8px;
     }
 
